add search and show email for article
