# internal/todo/entity/entity.go
@@ -13,7 +13,7 @@ type Todo struct {
 	Content   string    `gorm:"column:content"`
 	CreatedBy int       `gorm:"column:created_by"`
 	CreatedAt time.Time `gorm:"autoCreateTime"`
-	UpdatedBy int       `gorm:"column:update_by;default:(-)"`
+	UpdatedBy int       `gorm:"column:updated_by;default:(-)"`
 	UpdatedAt time.Time `gorm:"autoUpdateTime;default:(-)"`
 }
 
